bugfix: - jumping and not right location of panels

--- a/idocs-share/source/web/themes/citeckTheme/yui/assets/skin.css
+++ b/idocs-share/source/web/themes/citeckTheme/yui/assets/skin.css
@@ -46,7 +46,6 @@ version: 2.6.0
 	height: 500px;
 }
 
-.yui-skin-citeckTheme .yui-overlay-hidden,
 .yui-skin-citeckTheme .yui-overlay-hidden > .yui-overlay > * {
   	display: none;
 }
